codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_goal_budget_limited_message.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: last
---
■ Goal budget reached - the turn was stopped.
