codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__limits_snapshot_basic.snap
---
source: tui/src/chatwidget/tests.rs
expression: visual
---
[magenta]/limits[/]

[bold]Rate limit usage snapshot[/]
[dim]  Tip: run `/limits` right after Codex replies for freshest numbers.[/]
  • Weekly limit[dim] (≈5 hours window)[/]: [magenta]30.0% used[/] — [green]70.0% remaining[/]
  • Hourly limit[dim] (≈1 week window)[/]: [cyan]60.0% used[/] — 40.0% remaining
[green]  Within current limits[/]

[dim]  ╭─────────────────────────────────────────────────╮[/]
  [dim]│[/][magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/][dim]│[/]
  [dim]│[/][magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/][dim]│[/]
  [dim]│[/][magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/] [magenta](>_)[/][dim]│[/]
  [dim]│[/][cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/][dim]│[/]
  [dim]│[/][cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] [cyan](>_)[/] (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
[dim]  ╰─────────────────────────────────────────────────╯[/]

[bold]Legend[/]
  • Magenta = weekly usage so far
  • Cyan = hourly capacity still available
  • White = weekly capacity beyond the hourly window
