codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__limits_snapshot_mixed_usage.snap
---
source: tui/src/chatwidget/tests.rs
expression: visual
---
[magenta]/limits[/]

[bold]Rate limit usage snapshot[/]
[dim]  Tip: run `/limits` right after Codex replies for freshest numbers.[/]
  • Hourly limit[dim] (≈5 hours window)[/]: [yellow]20.0% used[/]
  • Weekly limit[dim] (≈1 week window)[/]: [yellow]20.0% used[/]
[green]  Within current limits[/]

[dim]  ╭─────────────────────────────────────────────────╮[/]
  [dim]│[/][yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/][dim]│[/]
  [dim]│[/][yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/] [yellow](>_)[/][dim]│[/]
  [dim]│[/][green](>_)[/] [green](>_)[/] [green](>_)[/] [green](>_)[/] [green](>_)[/] [green](>_)[/] [green](>_)[/] [green](>_)[/] (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
  [dim]│[/](>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_) (>_)[dim]│[/]
[dim]  ╰─────────────────────────────────────────────────╯[/]

[bold]Legend[/]
  • [yellow+bold]Yellow[/] = weekly usage so far
  • [green+bold]Green[/] = hourly capacity still available
  • [bold]White[/] = weekly capacity beyond the hourly window
