codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_clock_wait_sleeping_status.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "render_bottom_popup(&chat, 80)"
---
• Sleeping (0s • esc to interrupt)


› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
