codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_command_output_delta_active.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: active
---
• Running printf 'stdout\nstderr\n'
  └ stdout
    stderr
